Bug 184300 - kapman crashes with qt 4.5-rc1
Summary: kapman crashes with qt 4.5-rc1
Status: RESOLVED FIXED
Alias: None
Product: kapman
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Thomas Gallinari
URL:
Keywords:
: 184350 185829 229594 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-02-14 12:16 UTC by Giovanni Masucci
Modified: 2011-01-02 18:32 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Giovanni Masucci 2009-02-14 12:16:25 UTC
Version:            (using KDE 4.2.0)
OS:                Linux
Installed from:    Ubuntu Packages

Unfortunatly I cannot provide a backtrace because I don't have root acces to this machine and can't install debug packages...well it's still very easy to reproduce.
Witch qt 4.5-rc1 open kapman and start to play. After a few seconds it ALWAYS crashes, especially when you are moving in the lower part of the window.
Comment 1 George Kiagiadakis 2009-02-14 12:47:40 UTC
I can confirm. It crashes as soon as the player hits one of the labels "level : x" or "lives : x" at the bottom.

Εφαρμογή: Kapman (kapman), σήμα SIGSEGV
0x00007fc7d4b34ff1 in nanosleep () from /lib/libc.so.6
[Current thread is 0 (LWP 20114)]

Thread 16 (Thread 0x413be950 (LWP 20134)):
#0  0x00007fc7d2fd0fad in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fc7c942acb1 in ?? () from /usr/lib/libxine.so.1
#2  0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#3  0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 15 (Thread 0x41bbf950 (LWP 20135)):
#0  0x00007fc7d2fce51f in pthread_mutex_lock () from /lib/libpthread.so.0
#1  0x0000000000000001 in ?? ()
#2  0x00007fc7d4b71e80 in ?? () from /lib/libc.so.6
#3  0x00000000007af620 in ?? ()
#4  0x00000000006dbcc0 in ?? ()
#5  0x00000000007af628 in ?? ()
#6  0x00007fc7d29a8ce0 in ?? () from /usr/lib/libglib-2.0.so.0
#7  0x00007fc7d2722f6a in ?? () from /usr/lib/libglib-2.0.so.0
#8  0x00007fc7d272342b in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#9  0x00007fc7d659d21e in QEventDispatcherGlib::processEvents (this=0x8663a0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:320
#10 0x00007fc7d6572462 in QEventLoop::processEvents (this=<value optimized out>, flags={i = 1102835792}) at kernel/qeventloop.cpp:144
#11 0x00007fc7d657282d in QEventLoop::exec (this=0x41bbf090, flags={i = 1102835872}) at kernel/qeventloop.cpp:195
#12 0x00007fc7d6488858 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:476
#13 0x00007fc7c9685634 in Phonon::Xine::XineThread::run (this=0x781ae0) at ../../xine/xinethread.cpp:143
#14 0x00007fc7d648b7c2 in QThreadPrivate::start (arg=0x781ae0) at thread/qthread_unix.cpp:184
#15 0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#16 0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#17 0x0000000000000000 in ?? ()

Thread 14 (Thread 0x433c2950 (LWP 20144)):
#0  0x00007fc7d2fd0fad in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fc7c942acb1 in ?? () from /usr/lib/libxine.so.1
#2  0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#3  0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 13 (Thread 0x46bc9950 (LWP 20280)):
#0  0x00007fc7c9b263c8 in ?? () from /usr/lib/libasound.so.2
#1  0x00007fc7c9b2195f in snd_hctl_handle_events () from /usr/lib/libasound.so.2
#2  0x00007fc7c9b2b005 in snd_mixer_handle_events () from /usr/lib/libasound.so.2
#3  0x00007fc7c2b19838 in ?? () from /usr/lib/xine/plugins/1.25/xineplug_ao_out_alsa.so
#4  0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#5  0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 12 (Thread 0x473ca950 (LWP 20281)):
#0  0x00007fc7d2fd0d29 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fc7c943bc13 in ?? () from /usr/lib/libxine.so.1
#2  0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#3  0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 11 (Thread 0x47bcb950 (LWP 20282)):
#0  0x00007fc7d4b5db66 in poll () from /lib/libc.so.6
#1  0x00007fc7c2b197f9 in ?? () from /usr/lib/xine/plugins/1.25/xineplug_ao_out_alsa.so
#2  0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#3  0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 10 (Thread 0x483cc950 (LWP 20283)):
#0  0x00007fc7d2fd0d29 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fc7c943bc13 in ?? () from /usr/lib/libxine.so.1
#2  0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#3  0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 9 (Thread 0x48bcd950 (LWP 20284)):
#0  0x00007fc7d4b5fce2 in select () from /lib/libc.so.6
#1  0x00007fc7c9453304 in xine_usec_sleep () from /usr/lib/libxine.so.1
#2  0x00007fc7c943879b in ?? () from /usr/lib/libxine.so.1
#3  0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#4  0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 8 (Thread 0x493ce950 (LWP 20285)):
#0  0x00007fc7d2fd0d29 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fc7c942e6ab in ?? () from /usr/lib/libxine.so.1
#2  0x00007fc7c943447e in ?? () from /usr/lib/libxine.so.1
#3  0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#4  0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 7 (Thread 0x49bcf950 (LWP 20286)):
#0  0x00007fc7d2fd0d29 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fc7c942e6ab in ?? () from /usr/lib/libxine.so.1
#2  0x00007fc7c943552e in ?? () from /usr/lib/libxine.so.1
#3  0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#4  0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 6 (Thread 0x4a3d0950 (LWP 20287)):
#0  0x00007fc7d2fd0d29 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fc7c943e7eb in ?? () from /usr/lib/libxine.so.1
#2  0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#3  0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x40a3b950 (LWP 20324)):
#0  0x00007fc7d4b5fce2 in select () from /lib/libc.so.6
#1  0x00007fc7c9453304 in xine_usec_sleep () from /usr/lib/libxine.so.1
#2  0x00007fc7c943879b in ?? () from /usr/lib/libxine.so.1
#3  0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#4  0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x4abd1950 (LWP 20325)):
#0  0x00007fc7d2fd0d29 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fc7c942e6ab in ?? () from /usr/lib/libxine.so.1
#2  0x00007fc7c943447e in ?? () from /usr/lib/libxine.so.1
#3  0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#4  0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x4b3d2950 (LWP 20326)):
#0  0x00007fc7d2fd0d29 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fc7c942e6ab in ?? () from /usr/lib/libxine.so.1
#2  0x00007fc7c943552e in ?? () from /usr/lib/libxine.so.1
#3  0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#4  0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x4bbd3950 (LWP 20327)):
#0  0x00007fc7d2fd0d29 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fc7c943e7eb in ?? () from /usr/lib/libxine.so.1
#2  0x00007fc7d2fccfc7 in start_thread () from /lib/libpthread.so.0
#3  0x00007fc7d4b665ad in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fc7d81216f0 (LWP 20114)):
[KCrash Handler]
#5  0x000000000041a865 in KapmanItem::manageCollision (this=0x12adff0) at /tmp/buildd/kdegames-4.2.0/kapman/kapmanitem.cpp:99
#6  0x000000000040f040 in KapmanItem::qt_metacall (this=0x12adff0, _c=QMetaObject::InvokeMetaMethod, _id=189, _a=0x7fffe0260e30)
    at /tmp/buildd/kdegames-4.2.0/obj-x86_64-linux-gnu/kapman/moc_kapmanitem.cpp:81
#7  0x00007fc7d6589592 in QMetaObject::activate (sender=0x1565860, from_signal_index=<value optimized out>, to_signal_index=8, argv=0x2191560) at kernel/qobject.cpp:3064
#8  0x000000000040ecd8 in Game::qt_metacall (this=0x86b310, _c=QMetaObject::InvokeMetaMethod, _id=189, _a=0x7fffe0260f40) at /tmp/buildd/kdegames-4.2.0/obj-x86_64-linux-gnu/kapman/moc_game.cpp:107
#9  0x00007fc7d6589592 in QMetaObject::activate (sender=0x1566400, from_signal_index=<value optimized out>, to_signal_index=4, argv=0x2191560) at kernel/qobject.cpp:3064
#10 0x00007fc7d6583873 in QObject::event (this=0x1566400, e=0x2191578) at kernel/qobject.cpp:1077
#11 0x00007fc7d57656fd in QApplicationPrivate::notify_helper (this=0x636fc0, receiver=0x1566400, e=0x7fffe02615e0) at kernel/qapplication.cpp:4051
#12 0x00007fc7d576d8fa in QApplication::notify (this=0x7fffe0261920, receiver=0x1566400, e=0x7fffe02615e0) at kernel/qapplication.cpp:4016
#13 0x00007fc7d7c57fbb in KApplication::notify (this=0x7fffe0261920, receiver=0x1566400, event=0x7fffe02615e0) at ../../kdeui/kernel/kapplication.cpp:307
#14 0x00007fc7d6573bbc in QCoreApplication::notifyInternal (this=0x7fffe0261920, receiver=0x1566400, event=0x7fffe02615e0) at kernel/qcoreapplication.cpp:594
#15 0x00007fc7d65a0d76 in QTimerInfoList::activateTimers (this=0x63b820) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:208
#16 0x00007fc7d659d29d in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:159
#17 0x00007fc7d271faab in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#18 0x00007fc7d272326d in ?? () from /usr/lib/libglib-2.0.so.0
#19 0x00007fc7d272342b in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#20 0x00007fc7d659d1ff in QEventDispatcherGlib::processEvents (this=0x632bf0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:318
#21 0x00007fc7d57fd79f in QGuiEventDispatcherGlib::processEvents (this=0x166eb10, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:197
#22 0x00007fc7d6572462 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -534374320}) at kernel/qeventloop.cpp:144
#23 0x00007fc7d657282d in QEventLoop::exec (this=0x7fffe0261890, flags={i = -534374240}) at kernel/qeventloop.cpp:195
#24 0x00007fc7d6574af4 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:872
#25 0x000000000041e68f in main (argc=1, argv=0x7fffe0261c48) at /tmp/buildd/kdegames-4.2.0/kapman/main.cpp:44

Comment 2 Dario Andres 2009-02-17 23:09:46 UTC
*** Bug 184350 has been marked as a duplicate of this bug. ***
Comment 3 Mauricio Piacentini 2009-02-18 22:36:27 UTC
Confirmed here with qt-copy, running against a binary compiled with Qt4.4:

Thread 1 (Thread 0xb60646c0 (LWP 6132)):
[KCrash Handler]
#6  0x08061b35 in KapmanItem::manageCollision (this=0xa152188) at /home/piacentini/kde/src/KDE/kdegames/kapman/kapmanitem.cpp:99
#7  0x080541dd in KapmanItem::qt_metacall (this=0xa152188, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbfb90e0c) at /home/piacentini/kde/build/KDE/kdegames/kapman/moc_kapmanitem.cpp:81
#8  0xb778fb9b in QMetaObject::activate (sender=0xa55cdb0, from_signal_index=8, to_signal_index=8, argv=0x0) at kernel/qobject.cpp:3061
#9  0xb7790f6b in QMetaObject::activate (sender=0xa55cdb0, m=0x80682a4, local_signal_index=2, argv=0x0) at kernel/qobject.cpp:3136
#10 0x08053773 in Kapman::gameUpdated (this=0xa55cdb0) at /home/piacentini/kde/build/KDE/kdegames/kapman/moc_kapman.cpp:96
#11 0x08061291 in Kapman::emitGameUpdated (this=0xa55cdb0) at /home/piacentini/kde/src/KDE/kdegames/kapman/kapman.cpp:145
#12 0x08056834 in Game::update (this=0xa1a5d60) at /home/piacentini/kde/src/KDE/kdegames/kapman/game.cpp:387
#13 0x08053c78 in Game::qt_metacall (this=0xa1a5d60, _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0xbfb90f6c) at /home/piacentini/kde/build/KDE/kdegames/kapman/moc_game.cpp:107
#14 0xb778fb9b in QMetaObject::activate (sender=0xa5575e0, from_signal_index=4, to_signal_index=4, argv=0x0) at kernel/qobject.cpp:3061
#15 0xb7790f6b in QMetaObject::activate (sender=0xa5575e0, m=0xb7835904, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3136
#16 0xb77cdb59 in QTimer::timeout (this=0xa5575e0) at .moc/debug-shared/moc_qtimer.cpp:128
#17 0xb77986a6 in QTimer::timerEvent (this=0xa5575e0, e=0xbfb91494) at kernel/qtimer.cpp:256
#18 0xb778d99a in QObject::event (this=0xa5575e0, e=0xbfb91494) at kernel/qobject.cpp:1077
#19 0xb6dd8cd5 in QApplicationPrivate::notify_helper (this=0xa05e838, receiver=0xa5575e0, e=0xbfb91494) at kernel/qapplication.cpp:4051
#20 0xb6dd8ff7 in QApplication::notify (this=0xbfb9173c, receiver=0xa5575e0, e=0xbfb91494) at kernel/qapplication.cpp:3598
#21 0xb7ec3541 in KApplication::notify (this=0xbfb9173c, receiver=0xa5575e0, event=0xbfb91494) at /home/piacentini/kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:307
#22 0xb77795a3 in QCoreApplication::notifyInternal (this=0xbfb9173c, receiver=0xa5575e0, event=0xbfb91494) at kernel/qcoreapplication.cpp:590
#23 0xb777d127 in QCoreApplication::sendEvent (receiver=0xa5575e0, event=0xbfb91494) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:208
#24 0xb77ab7f1 in QTimerInfoList::activateTimers (this=0xa0617c4) at kernel/qeventdispatcher_unix.cpp:567
#25 0xb77a90a0 in timerSourceDispatch (source=0xa061790) at kernel/qeventdispatcher_glib.cpp:159
#26 0xb67e26f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#27 0xb67e5da3 in ?? () from /usr/lib/libglib-2.0.so.0
#28 0xb67e5f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#29 0xb77a83d2 in QEventDispatcherGlib::processEvents (this=0xa05d620, flags={i = -1078389228}) at kernel/qeventdispatcher_glib.cpp:318
#30 0xb6e87058 in QGuiEventDispatcherGlib::processEvents (this=0xa05d620, flags={i = -1078389180}) at kernel/qguieventdispatcher_glib.cpp:197
#31 0xb7776594 in QEventLoop::processEvents (this=0xbfb916d0, flags={i = -1078389104}) at kernel/qeventloop.cpp:144
#32 0xb77767ee in QEventLoop::exec (this=0xbfb916d0, flags={i = -1078389032}) at kernel/qeventloop.cpp:191
#33 0xb7779d7b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:872
#34 0xb6dd89ee in QApplication::exec () at kernel/qapplication.cpp:3526
#35 0x08065a6b in main (argc=134648940, argv=0xa139b20) at /home/piacentini/kde/src/KDE/kdegames/kapman/main.cpp:44
Comment 4 Dmitrij D. Czarkoff 2009-03-15 23:36:01 UTC
Don't know whether it is the same bug, but I always get label @Уровень 1" ("Level 1" in russian) overlaping the arena area, and I always get the game crash when I try to walk over this label.
I also have Qt4. KDE 4.2.1.
Comment 5 MoonBeam 2009-03-19 11:45:40 UTC
I have the same problem.


Application: Kapman (kapman), signal SIGSEGV

Thread 1 (Thread 0xb5fedab0 (LWP 4759)):
[KCrash Handler]
#6  0x08060a0b in _start ()
Comment 6 bo 2009-03-19 14:48:56 UTC
I have tested this with a standard Qt 4.5.0 and a fresh KDE compilation. I could not crash it. But it was fun trying to reproduce the bug :-)
Comment 7 Marcus Harrison 2009-03-31 10:38:43 UTC
I can confirm this as well.

Maybe it's a problem with builds against Qt 4.4 using Qt 4.5? I'm going to try re-compiling it...
Comment 8 Dmitrij D. Czarkoff 2009-03-31 10:48:05 UTC
(In reply to comment #7)
> Maybe it's a problem with builds against Qt 4.4 using Qt 4.5? I'm going to try
> re-compiling it...

It isn't. I have this problem on my Gentoo box, where I re-emerged kapman after  Qt 4.4 was replaced by Qt 4.5.
So this happens in 'pure' builds against Qt 4.5 also.
Comment 9 Marcus Harrison 2009-04-02 16:03:23 UTC
(In reply to comment #8)
> (In reply to comment #7)
> > Maybe it's a problem with builds against Qt 4.4 using Qt 4.5? I'm going to try
> > re-compiling it...
> 
> It isn't. I have this problem on my Gentoo box, where I re-emerged kapman after
>  Qt 4.4 was replaced by Qt 4.5.
> So this happens in 'pure' builds against Qt 4.5 also.

I can confirm this. After re-compiling all of KDE (and dependencies), it still crashed.
Comment 10 Dario Andres 2009-09-28 02:29:02 UTC
*** Bug 185829 has been marked as a duplicate of this bug. ***
Comment 11 Christoph Feck 2010-04-14 01:21:13 UTC
*** Bug 229594 has been marked as a duplicate of this bug. ***
Comment 12 Christoph Feck 2010-04-14 01:21:52 UTC
Bug 229594 has steps to reproduce (but I could not).
Comment 13 t3ddy 2010-04-14 20:49:42 UTC
@Christoph Feck
To reproduce the bug, pause the game when there's the written "Level 1", then start to play and move pacman towards the written, that is still on the screen and it shouldn't.
The game will crash.
Comment 14 Stefan Majewsky 2011-01-02 00:15:38 UTC
SVN commit 1210730 by majewsky:

Fix a crash that occurs when the hero hits a non-ElementItem.

BUG: 184300

 M  +4 -1      kapmanitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1210730
Comment 15 Stefan Majewsky 2011-01-02 18:32:19 UTC
SVN commit 1210926 by majewsky:

Backport r12107{08,29,30,31} from trunk.

CCBUG: 184300
CCBUG: 224399


 M  +0 -2      kapman/gamescene.cpp  
 M  +4 -1      kapman/kapmanitem.cpp  
 M  +5 -10     kapman/kapmanmainwindow.cpp  
 M  +5 -0      kapman/main.cpp  
 M  +1 -1      libkdegames/kgamerendererclient.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1210926