Fix a crash that occurs when the hero hits a non-ElementItem.

BUG: 184300

svn path=/trunk/KDE/kdegames/kapman/; revision=1210730